Fix `String#partition`

Split with the matched part when the separator matches the empty
part at the beginning.  [Bug #11014]